# Agentium

./: .env  .env.example  .gitignore  .pinned-digests.env  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml  fix_scaling.py  log.txt  logs.txt  package-lock.json  pytest_out.txt  test_output.txt
.plan/: phase_6_6_plan.md
backend/: .coveragerc  .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.privileged  Dockerfile.remote-executor  README.md  celery_app.py  main.py  migrations_audit_report.json  pytest.ini  requirements-dev.txt  requirements.txt
docs/: 6.8-system-message-verification.md  ALEMBIC_MIGRATIONS.md  SECRET_HYGIENE.md  chat-context-benchmark.md  docker-image-hardening.md  embedding-cutover-plan.md  host_native _voice_implementation.md  issues_log_analysis.md  knowledge_write_schema.md  selfhost.md  todo.md  workflow.md
frontend/: .gitignore  Dockerfile  README.md  eslint.config.js  index.html  lighthouserc.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  typescript-errors.txt  vite.config.ts
redis/: redis.conf
scripts/: agentium-voice-startup.cmd  detect-host.ps1  detect-host.sh  docker-scout.sh  enforce-shared-components.sh  install-voice-bridge.ps1  install-voice-bridge.sh  pin-digests.sh  refactor_api_key_manager.py  (+8 more)
sdk/python/: README.md  pyproject.toml
sdk/python/agentium_sdk/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_sdk.py
(+1014 files in other folders)
